[tool.poetry]
name = "project1-romanchuk-roman-m25-555"
version = "0.1.0"
description = "Text adventure game 'Labyrinth Game'"
authors = ["Romanchuk Roman <r.romanchuk@ya.ru>"]
readme = "README.md"
packages = [{ include = "labyrinth_game" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
